Fixed spacing of subscribe prompt on mobile

--- a/app/assets/stylesheets/main/index.scss
+++ b/app/assets/stylesheets/main/index.scss
@@ -200,5 +200,8 @@
         #subscribe input#subscriber_email {
             width: 100%;
         }
+        #subscribe-prompt {
+            margin-bottom: 112px;
+        }
     }
 }
